--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         }
 
         h1 {
-            margin-bottom: 20px;
+            margin-top: 40px;
+            margin-bottom: 40px;
             font-size: 24px;
             color: #333;
         }
