--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Generator</title>
+    <title>Crescent ID Badge Generator</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -17,10 +17,10 @@
 
         .container {
             background: white;
-            padding: 40px;
+            padding: 60px;
             border-radius: 10px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            box-shadow: 0 10px 20px rgba(0.1, 0.1, 0.1, 0.1);
+            max-width: 300px;
             width: 100%;
             text-align: center;
         }
