--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>QR Code Generator</h1>
+        <h1>Crescent ID Badge Generator</h1>
 
         <!-- Input fields -->
         <label for="name">Name</label>
