--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             const password = document.getElementById("password").value;
 
             // Concatenate User ID and Password with carriage return (new line)
-            const qrData = userId + "\n" + password;
+            const qrData = userId + "\n\r" + password;
 
             // Display the name
             const displayNameElement = document.getElementById("displayName");
