--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         button {
             background: #007bff;
             color: white;
-            padding: 10px 20px;
+            padding: 10px 80px;
             font-size: 16px;
             border: none;
             border-radius: 5px;
@@ -78,13 +78,13 @@
         }
 
         canvas {
-            margin-top: 20px;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Crescent ID Badge Generator(2)</h2>
+        <h2>Crescent ID Badge Generator</h2>
 
         <!-- Input fields -->
         <label for="name">Name</label>
